# football-predictions-national

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.features  Dockerfile.inference  Dockerfile.lambda  pyproject.toml  requirements.features.txt  requirements.lambda.txt
.github/workflows/: pr-gate.yml
Documents/: action-plan-cicd.md  action-plan.md  ui-guide.md  worldcup-ml-data-pipeline.md  worldcup-ml-models-evaluation.md
documents/: model-card-national.md
infrastructure/: README.md  app.py  cdk.json  requirements.txt
infrastructure/stacks/: feature_stack.py  ingest_stack.py  observability_stack.py
outputs/: training_history.csv
scripts/: bootstrap_data.py  catchup_fixtures.py  compare_decision_rules.py  drift_national_recent.py  evaluate_per_competition_rho.py  fetch_fifa_rankings.py  ingest_missing_fixtures.py  ingest_missing_players.py  migrate_local_to_s3.py  predict_inference.py  probe_missing_leagues.py  rebuild_fixtures_csv.py  refit_rho_per_competition.py  refit_rho_wc_only.py  retrain_expanded.py  train_pipeline.py  tune_and_explain_club.py  validate_features.py  validate_ingestion.py
src/api/: dependencies.py  main.py  models.py  predictions_store.py
src/api/routes/: predictions.py  simulate.py
src/data/: api_client.py  incremental.py  ingest.py  lambda_handlers.py  schemas.py  storage.py
src/features/: build.py  h2h.py  handler.py  io.py  rebuild.py  rolling.py  squad.py  tournament.py
src/inference/: predict.py
src/models/: calibrate.py  train.py
src/ui/client/: package-lock.json  package.json
src/ui/client/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
src/ui/server/: package-lock.json  package.json
src/ui/server/src/: config.ts  index.ts
src/ui/server/src/routes/: health.ts  (+2 more)
tests/fixtures/: sample_event.json  sample_fixture.json  sample_league.json  sample_player.json  sample_team.json
tests/unit/api/: test_endpoints.py
tests/unit/data/: test_api_client.py  test_ingest.py  test_schemas.py
tests/unit/features/: test_build.py  test_h2h.py  test_rolling.py  test_squad.py  test_tournament.py
tests/unit/inference/: test_predict.py
tests/unit/models/: test_calibrate.py
(+13 files in other folders)
