[project]
name = "football-predictions-national"
version = "0.1.0"
description = "End-to-end system for predicting national team football match scorelines using Poisson goal models"
readme = "CLAUDE.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31,<3",
    "pydantic>=2.5,<3",
    "pandas>=2.1,<3",
    "numpy>=1.26,<3",
    "sqlalchemy>=2.0,<3",
    "psycopg2-binary>=2.9,<3",
    "python-dotenv>=1.0,<2",
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<3",
    "lightgbm>=4.2,<5",
    "optuna>=3.5,<4",
    "shap>=0.46,<1",
    "numba>=0.60",
    "llvmlite>=0.43",
    "scipy>=1.12,<2",
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<1",
    "fastapi>=0.109,<1",
    "uvicorn>=0.27,<1",
    "joblib>=1.3,<2",
    "boto3>=1.34,<2",
    "pdfplumber>=0.11.9",
    "kagglehub>=1.0.0",
    "pyarrow>=24.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<10",
    "pytest-cov>=4.1,<8",
    "ruff>=0.3,<1",
    "mypy>=1.8,<2",
    "pre-commit>=3.6,<5",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
# ML code conventionally uses uppercase X for feature matrices
"src/models/**" = ["N803", "N806"]
"src/features/**" = ["N803", "N806"]
# FastAPI uses Depends() in argument defaults by convention
"src/api/**" = ["B008", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-fail-under=65 --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
